[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/hud.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1018.0
margin_top = -596.0
margin_right = 4.0
margin_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurnButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -102.4
margin_right = -5.0
margin_bottom = -10.4
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -572.0
margin_top = -98.0
margin_right = -229.0
margin_bottom = -26.0
text = "Selected tile: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="."]
anchor_left = 0.089
anchor_top = 0.005
anchor_right = 0.089
anchor_bottom = 0.005
margin_left = -0.136002
margin_top = -2.38419e-07
margin_right = 435.864
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control2"]
margin_left = 162.0
margin_top = 41.0
margin_right = 239.0
margin_bottom = 55.0
text = "Round: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control2"]
margin_left = 164.0
margin_top = 20.0
margin_right = 292.0
margin_bottom = 40.0
text = "Player:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
